network settings - fix visual spacing bugs

--- a/frontend/src/app/components/management/management-panel/management-panel.less
+++ b/frontend/src/app/components/management/management-panel/management-panel.less
@@ -16,4 +16,8 @@
 	.tab-content {
 		padding-bottom: 5em;
 	}
+
+	hr {
+		margin-top: 2em;
+	}
 }
