--- a/frontend/src/app/components/management/p2p-form/p2p-form.less
+++ b/frontend/src/app/components/management/p2p-form/p2p-form.less
@@ -14,6 +14,10 @@ p2p-form {
 		}
 	}
 
+	.summary {
+		margin-bottom: 0;
+	}
+
 	input[type=number] {
 		width: 5em;
 	}
